--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
 								<div class="col-md-12">
 									{{ content }}
 								</div>
-								<div class="col-md-12 m-0 p-0">
+								<div class="col-md-12">
 									{% include comment.html %}
 								</div>
 							</div>
