--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	{% include head.html %}
-	<title>{{ site.title }}</title>
+	<title>{{ page.title }} &middot; {{ site.title }}</title>
 </head>
 <body>
 	<div id="app">
