--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,10 @@
 		<span class="d-block my-2 text-secondary">{{ site.title }} &copy; 2018</span>
 		<div class="d-flex justify-content-around">
 			<a href="/2017/06/19/about-me.html">about me</a>
+			<a href="/resume.html">resume</a>
 			<a href="/books.html">books</a>
 			<a href="/works.html">works</a>
+			<a href="/arcive.html">archive</a>
 		</div>
 	</div>
 </footer>
