--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -38,6 +38,14 @@ pre{
 	padding: 10px 20px;
 }
 
+.resume {
+	.no-link-style{
+		&:hover{
+			text-decoration: none;
+		}
+	}
+}
+
 .no-link-style{
 	color: $black-color !important;
 
@@ -135,5 +143,18 @@ footer{
 
 	h3{
 		font-size: 1.25em;
+	}
+}
+
+
+
+.resume {
+	a {
+		text-decoration: none;
+		color: $black-color;
+		&:hover{
+			color: $black-color;
+			text-decoration: none;
+		}
 	}
 }
