--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,9 @@
 		<a href="/2017/06/19/about-me.html">
 			<li>About Me</li>
 		</a>
+		<a href="/resume.html">
+			<li>Resume</li>
+		</a>
 		<a href="/books.html">
 			<li>Books</li>
 		</a>
