--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -15,11 +15,11 @@
 						{{ content }}
 					</div>
 					<div class="col-md-12 d-flex justify-content-between py-3 border-top">
-						<a href="/assets/pdf/resume.pdf" target="_blank" class="no-link-style text-secondary">
+						<a href="/assets/pdf/resume.pdf" target="_blank" class="text-secondary">
 							<i class="fas fa-file-pdf"></i> PDF Version
 						</a>
 
-						<a href="/" class="text-secondary no-link-style">Home</a>
+						<a href="/" class="text-secondary">Home</a>
 					</div>
 				</div>
 			</div>
